--- a/crb_code(AK).ipynb
+++ b/crb_code(AK).ipynb
@@ -5250,23 +5250,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9358974358974359\n",
+      "Accuracy: 0.9230769230769231\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.93      1.00      0.96       312\n",
-      "           1       0.98      0.69      0.81        78\n",
+      "           0       0.91      1.00      0.95       312\n",
+      "           1       0.98      0.63      0.77        78\n",
       "\n",
-      "    accuracy                           0.94       390\n",
-      "   macro avg       0.96      0.84      0.89       390\n",
-      "weighted avg       0.94      0.94      0.93       390\n",
-      "\n"
+      "    accuracy                           0.92       390\n",
+      "   macro avg       0.95      0.81      0.86       390\n",
+      "weighted avg       0.93      0.92      0.92       390\n",
+      "\n",
+      "Cross Val Score:  0.9274177590897849\n"
      ]
     }
    ],
@@ -5274,7 +5275,9 @@
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"Accuracy:\", accuracy)\n",
-    "print(classification_report(y_test, y_pred))"
+    "print(classification_report(y_test, y_pred))\n",
+    "print(\"Cross Val Score: \", stats.mean(cross_val_score(model, X_train, \n",
+    "                                                      y_train, cv = 5)))"
    ]
   },
   {
