--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -5,6 +5,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Ben Earnest\n",
+    "\n",
+    "# Andrew Kim\n",
+    "\n",
+    "# Grigor Tashchyan\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Complaints Evaluated by the Commission on Police Practices\n",
     "\n",
     "In 2020, voter-approved Measure B created a new independent Commission on Police Practices (CPP) that replaced the Community Review Board on Police Practices (CRB). The CPP independently investigates officer-involved shootings, in-custody deaths, & other significant incidents in a process that is transparent and accountable to the community. The CPP also evaluates SDPD policies, practices, training, and protocols. This dataset includes all cases the CPP reviewed and closed out since the beginning of FY 2019.\n",
@@ -13,7 +24,7 @@
     "\n",
     "Each case in this dataset is identified by a unique case id and case number. A single case may involve multiple allegations and multiple officers. In the FY2019 file, each row represents one allegation and finding per officer in the complaint. Each officer named in the complaint is assigned an anonymous person id in the pid field that is unique for that case id. Starting in FY2020, cases and allegation are in separate files that can be joined on the id and case_number fields.\n",
     "\n",
-    "The body worn camera details file included with this dataset lists each officer (pid) per complaint and whether that officer had a body worn camera on or off during the incident under review.\n"
+    "The body worn camera details file included with this dataset lists each officer (pid) per complaint and whether that officer had a body worn camera on or off during the incident under review."
    ]
   },
   {
@@ -30,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Install required libraries\n",
     "import requests\n",
     "import pandas as pd\n",
     "import time\n",
@@ -356,6 +368,7 @@
     }
    ],
    "source": [
+    "#Display tables from crb database\n",
     "tables = pd.DataFrame(pd.read_sql('Show Tables', cnx))\n",
     "tables"
    ]
@@ -737,6 +750,7 @@
     }
    ],
    "source": [
+    "#Year 2019 Cases\n",
     "fy19 = pd.DataFrame(pd.read_sql(\"\"\"SELECT crb_cases_fy19_datasd.id, \n",
     "                                crb_cases_fy19_datasd.case_number,\n",
     "                                crb_cases_fy19_datasd.allegation,\n",
@@ -910,6 +924,7 @@
     }
    ],
    "source": [
+    "#Year 2020 Cases\n",
     "fy20 = pd.DataFrame(pd.read_sql(\"\"\"SELECT crb_allegations_fy2020_datasd.id, \n",
     "                                crb_allegations_fy2020_datasd.case_number,\n",
     "                                crb_allegations_fy2020_datasd.allegation,\n",
@@ -1085,6 +1100,7 @@
     }
    ],
    "source": [
+    "#Year 2021 Cases\n",
     "fy21 = pd.DataFrame(pd.read_sql(\"\"\"SELECT crb_allegations_fy2021_datasd.id, \n",
     "                                crb_allegations_fy2021_datasd.case_number,\n",
     "                                crb_allegations_fy2021_datasd.allegation,\n",
@@ -1260,6 +1276,7 @@
     }
    ],
    "source": [
+    "#Year 2022 Cases\n",
     "fy22 = pd.DataFrame(pd.read_sql(\"\"\"SELECT crb_allegations_fy2022_datasd.id, \n",
     "                                crb_allegations_fy2022_datasd.case_number,\n",
     "                                crb_allegations_fy2022_datasd.allegation,\n",
@@ -1435,6 +1452,7 @@
     }
    ],
    "source": [
+    "#Combine year cases under a single dataframe allyrs \n",
     "allyrs = pd.concat([fy19, fy20, fy21, fy22], axis=0)\n",
     "\n",
     "allyrs = allyrs.reset_index(drop=True)\n",
@@ -1856,6 +1874,7 @@
     }
    ],
    "source": [
+    "#Total number of missing data from each feature\n",
     "allyrs.isna().sum()"
    ]
   },
